Fix eclipse warnings